--- a/css/master.scss
+++ b/css/master.scss
@@ -157,7 +157,7 @@ html{
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-device-width: 768px) {
   @for $i from 1 through $grid-columns {
     .col-m-#{$i} {
       flex-basis: round-width($i);
@@ -166,7 +166,7 @@ html{
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-device-width: 1024px) {
   @for $i from 1 through $grid-columns {
     .col-l-#{$i} {
       flex-basis: round-width($i);
