Update: queue class and responsiveness

--- a/css/master.css
+++ b/css/master.css
@@ -12,6 +12,45 @@ html {
   }
 }
 
+* {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+main {
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  margin: 0;
+}
+header nav {
+  display: flex;
+}
+@media screen and (max-device-width: 640px) {
+  header {
+    padding: 0.5rem;
+  }
+}
+@media screen and (min-device-width: 640px) {
+  header {
+    padding: 1rem;
+  }
+}
+@media screen and (min-device-width: 768px) {
+  header {
+    padding: 1.5rem;
+  }
+}
+@media screen and (min-device-width: 1024px) {
+  header {
+    padding: 2rem;
+  }
+}
+
 .stack {
   display: flex;
   width: 100%;
@@ -49,57 +88,176 @@ html {
 }
 @media screen and (max-width: 640px) {
   .queue {
-    margin: auto;
+    margin: auto 0;
     padding: 0.125rem;
   }
 }
 @media screen and (min-width: 640px) {
   .queue {
-    margin: auto;
+    margin: auto 0;
     padding: 0.25rem;
   }
 }
 @media screen and (min-width: 768px) {
   .queue {
-    margin: auto;
+    margin: auto 0;
     padding: 0.375rem;
   }
 }
 @media screen and (min-width: 1024px) {
   .queue {
-    margin: auto;
+    margin: auto 0;
     padding: 0.5rem;
   }
 }
 
 .column {
-  flex-direction: column !important;
+  flex-direction: column;
 }
 
 .row {
-  flex-direction: row !important;
+  flex-direction: row;
 }
 
 .start {
-  justify-content: flex-start !important;
+  justify-content: flex-start;
 }
 
 .center {
-  justify-content: center !important;
+  justify-content: center;
 }
 
 .end {
-  justify-content: flex-end !important;
+  justify-content: flex-end;
 }
 
 .around {
-  justify-content: space-around !important;
+  justify-content: space-around;
 }
 
 .between {
-  justify-content: space-between !important;
+  justify-content: space-between;
 }
 
+.even {
+  justify-content: space-evenly;
+}
+
+.stretch {
+  justify-content: stretch;
+}
+
+@media screen and (min-device-width: 640px) {
+  .column-s {
+    flex-direction: column;
+  }
+
+  .row-s {
+    flex-direction: row;
+  }
+
+  .start-s {
+    justify-content: flex-start;
+  }
+
+  .center-s {
+    justify-content: center;
+  }
+
+  .end-s {
+    justify-content: flex-end;
+  }
+
+  .around-s {
+    justify-content: space-around;
+  }
+
+  .between-s {
+    justify-content: space-between;
+  }
+
+  .even-s {
+    justify-content: space-evenly;
+  }
+
+  .stretch-s {
+    justify-content: stretch;
+  }
+}
+@media screen and (min-device-width: 768px) {
+  .column-m {
+    flex-direction: column;
+  }
+
+  .row-m {
+    flex-direction: row;
+  }
+
+  .start-m {
+    justify-content: flex-start;
+  }
+
+  .center-m {
+    justify-content: center;
+  }
+
+  .end-m {
+    justify-content: flex-end;
+  }
+
+  .around-m {
+    justify-content: space-around;
+  }
+
+  .between-m {
+    justify-content: space-between;
+  }
+
+  .even-m {
+    justify-content: space-evenly;
+  }
+
+  .stretch-m {
+    justify-content: stretch;
+  }
+}
+@media screen and (min-device-width: 1024px) {
+  .column-l {
+    flex-direction: column;
+  }
+
+  .row-l {
+    flex-direction: row;
+  }
+
+  .start-l {
+    justify-content: flex-start;
+  }
+
+  .center-l {
+    justify-content: center;
+  }
+
+  .end-l {
+    justify-content: flex-end;
+  }
+
+  .around-l {
+    justify-content: space-around;
+  }
+
+  .between-l {
+    justify-content: space-between;
+  }
+
+  .even-l {
+    justify-content: space-evenly;
+  }
+
+  .stretch-l {
+    justify-content: stretch;
+  }
+}
 :root {
   --grid-gap: 0px;
 }
